syntax = "proto3";
import "google/protobuf/any.proto";
message EtherboyCreateAccountTx {
// public is a json object that the dApp can look into
	bytes data = 1;
}

message EtherboyStateTx {
	bytes data = 1;
}

message SimpleContractMethod {
// version to help upgrades to code
	int32 version = 1;

	string owner = 2;

	string method = 3;

	google.protobuf.Any data = 4;
	// the actual message body
//	oneof data {
//		EtherboyCreateAccountTx create_account = 16;
//		EtherboyStateTx state = 8;
//	}
}

message EtherboyAppState {
	bytes address = 1;
	bytes blob = 2;
}
